tests/expectations/compiler/records/duplicate_circuit_name_fail.out
Error [EAST0372017]: The name `Token` is defined multiple times.
    --> compiler-test:12:8
     |
   3 |       record Token {
     |              ^^^^^ previous definition of `Token` here
   ...
  12 |   struct Token { // This struct cannot have the same name as the record defined above it.
     |          ^^^^^ `Token` redefined here
